<resources>
    <string name="app_name">Cocovoitte</string>
    <string name="title_Accueil">Accueil</string>
    <string name="title_Parametres">Parametres</string>
    <string name="title_Profil">Profil</string>
    <string name="title_Proposer">Proposer</string>
    <string name="title_Rechercher">Rechercher</string>
    <string name="title_Bienvenue">Bienvenue sur Cocovoitte !</string>

    <string name="btn_log_in">Se connecter</string>
    <string name="btn_sign_up">S\'inscrire</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_email">email</string>
    <string name="title_Connexion">Connexion</string>
    <string name="tv_password">mot de passe</string>
    <string name="btn_submit">valider</string>
    <string name="tv_driveProp">Vos Trajets Proposés</string>
    <string name="tv_driveT">Vos Trajets Reservés</string>
    <string name="tv_driveV">Vos Trajets à Valider</string>
    <string name="tv_lastName">nom</string>
    <string name="tv_firstName">prénom</string>
    <string name="btn_disconnect">se déconnecter</string>
    <string name="tv_proposedDrive">proposés</string>
    <string name="tv_bookedDrive">réservés</string>
    <string name="tv_rate">note globale</string>
    <string name="btn_seeReviews">voir les avis</string>
    <string name="tv_preferences">Préférences</string>
    <string name="tv_reviewsCount">avis laissés</string>
    <string name="btn_refuser">Refuser</string>
    <string name="btn_accepter">Accepter</string>
    <string name="tv_bienvenue">Bienvenue</string>
    <string name="et_add_preference">ajouter une preference</string>
    <string name="et_addDescription">ajouter une description</string>
    <string name="tv_description">description</string>
    <string name="tv_profilePicture">photo de profil</string>
    <string name="btn_modify">modifier</string>
    <string name="tv_slogan">le covoiturage presque facile</string>
    <string name="tv_driveOffer">Proposer un trajet</string>
    <string name="tv_startingPlace">Lieu de départ</string>
    <string name="tv_arrivalPlace">Lieu d\'arrivée</string>
    <string name="hint_startingPlace">Ex : Paris</string>
    <string name="hint_arrivalPlace">Ex : Lyon</string>
    <string name="tv_costPerPassenger">Tarif par passager (€)</string>
    <string name="tv_departureDate">Date de départ</string>
    <string name="et_selectADate">Sélectionner une date</string>
    <string name="tv_departureTime">Heure de départ</string>
    <string name="et_selectTime">Sélectionner une heure</string>
    <string name="tv_numberOfPassenger">Nombre de passagers</string>
    <string name="tv_isRegularDrive">Trajet régulier ?</string>
    <string name="tv_yes">Oui</string>
    <string name="tv_no">Non</string>
    <string name="tv_Monday">L</string>
    <string name="tv_Tuesday">M</string>
    <string name="tv_Wednesday">M</string>
    <string name="tv_Thursday">J</string>
    <string name="tv_Friday">V</string>
    <string name="tv_Saturday">S</string>
    <string name="tv_Sunday">D</string>
    <string name="tv_frequency">Fréquence hebdomadaire</string>
    <string name="tv_welcome">Bienvenue</string>
    <string name="tv_niceToSeeYou">Heureux de vous revoir !</string>
    <string name="tv_today">Aujourd\'hui</string>
    <string name="tv_lookFor">Rechercher</string>
    <string name="tv_profileParameter">Paramètres du profil</string>
    <string name="tv_createAccount">Créer un compte</string>
    <string name="tv_generateQRcode">Générer le QR code</string>
    <string name="tv_driveValidation">Validation du trajet</string>
    <string name="tv_presentQRcode">Présentez ce code au conducteur</string>
    <string name="btn_close">FERMER</string>
    <string name="btn_book">Réserver</string>
    <string name="tv_scanQRcode">Scanner le QR code</string>
    <string name="tv_addPreferences">Ajouter une préférence</string>
    <string name="btn_logOut">Se déconnecter</string>
    <string name="txt_scanQRCode">Scanner le QR Code</string>
    <string name="txt_everyoneHere">Tout le monde est présent</string>
</resources>